--- a/flashcards_project/flashcards/templates/flashcards/cards.html
+++ b/flashcards_project/flashcards/templates/flashcards/cards.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards - Cards</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{% static 'flashcards/css/style.css' %}">
 </head>
 
 <body>
     <div class="container">
-        <h1>Карточки со словами</h1>
-        <button onclick="window.location.href='topics.html'">Назад к темам</button>
+        <h1>Карточки по теме: {{ topic }}</h1>
+        <button onclick="window.location.href='{% url 'topics' %}'">Назад к темам</button>
 
         <div id="card" class="card">
             <p id="word">Слово</p>
@@ -24,7 +25,7 @@
             <button onclick="nextCard()">Вперед</button>
         </div>
     </div>
-    <script src="js/cards.js"></script>
+    <script src="{% static 'flashcards/js/cards.js' %}"></script>
 </body>
 
 </html>
