--- a/flashcards_project/flashcards/templates/flashcards/index.html
+++ b/flashcards_project/flashcards/templates/flashcards/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards - Main Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{% static 'flashcards/css/style.css' %}">
 </head>
 
 <body>
     <div class="container">
         <h1>Добро пожаловать в WordsWorldWeb</h1>
-        <button onclick="window.location.href='topics.html'">Начать учить слова</button>
+        <button onclick="window.location.href='{% url 'topics' %}'">Начать учить слова</button>
     </div>
 </body>
 
