--- a/flashcards_project/flashcards/templates/flashcards/topics.html
+++ b/flashcards_project/flashcards/templates/flashcards/topics.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcards - Choose a Topic</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{% static 'flashcards/css/style.css' %}">
 </head>
 
 <body>
@@ -15,9 +16,9 @@
         <button onclick="selectTopic('Работа')">Работа</button>
         <button onclick="selectTopic('Спорт')">Спорт</button>
         <button onclick="selectTopic('Музыка')">Музыка</button>
-        <button onclick="window.location.href='index.html'">Назад</button>
+        <button onclick="window.location.href='{% url 'index' %}'">Назад</button>
     </div>
-    <script src="js/topics.js"></script>
+    <script src="{% static 'flashcards/js/topics.js' %}"></script>
 </body>
 
 </html>
