--- a/flashcards_project/flashcards/templates/flashcards/training.html
+++ b/flashcards_project/flashcards/templates/flashcards/training.html
@@ -12,17 +12,11 @@
 <body>
     <div class="container training-container">
         <h1>Тренировка</h1>
-        <div id="card-container">
-            <!-- Отображаем карточки -->
-            {% for card in cards %}
-            <div class="flashcard training-card">
-                <p class="flashcard-word">{{ card.word }}</p>
-                <p class="flashcard-transcription">{{ card.transcription }}</p>
-                <p class="flashcard-translation">{{ card.translation }}</p>
-            </div>
-            {% endfor %}
-        </div>
-        <button id="next-button" class="nav-button">Запомнил</button>
+        <div id="card-container"></div>
+        <button id="next-button" class="nav-button" style="display: none;">Далее</button>
+        <script id="card-data" type="application/json">
+            {{ cards|safe }}
+        </script>
     </div>
     <script src="{% static 'flashcards/js/training.js' %}"></script>
 </body>
