--- a/flashcards_project/flashcards/templates/registration/register.html
+++ b/flashcards_project/flashcards/templates/registration/register.html
@@ -1,7 +1,24 @@
-<!-- flashcards/templates/registration/register.html -->
-<h2>Регистрация</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Зарегистрироваться</button>
-</form>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Регистрация - WordsWorldWeb</title>
+    <link rel="stylesheet" href="{% static 'flashcards/css/style.css' %}">
+</head>
+
+<body>
+    <div class="form-container">
+        <h2 class="form-title">Регистрация</h2>
+        <form method="post" class="form">
+            {% csrf_token %}
+            {{ form.as_p }}  <!-- Формируем поля формы -->
+            <button type="submit" class="btn-submit">Зарегистрироваться</button>
+        </form>
+        <p class="form-text">Уже есть аккаунт? <a href="{% url 'login' %}">Войдите</a></p>
+    </div>
+</body>
+
+</html>
