--- a/flashcards_project/flashcards/templates/registration/profile.html
+++ b/flashcards_project/flashcards/templates/registration/profile.html
@@ -6,8 +6,32 @@
     <title>Профиль</title>
 </head>
 <body>
-    <h2>Добро пожаловать, {{ user.username }}!</h2>
-    <p>Вы успешно вошли в систему.</p>
+    <h1>Профиль пользователя: {{ user.username }}</h1>
+
+    <h2>Ваш прогресс:</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Слово</th>
+                <th>Статус</th>
+                <th>Правильных подряд</th>
+                <th>Попыток</th>
+                <th>Ошибок</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for progress in progress %}
+                <tr>
+                    <td>{{ progress.card.word }}</td>
+                    <td>{{ progress.get_status_display }}</td>
+                    <td>{{ progress.correct_streak }}</td>
+                    <td>{{ progress.total_attempts }}</td>
+                    <td>{{ progress.mistakes }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
     <a href="{% url 'logout' %}">Выйти</a>
 </body>
 </html>
